<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        app:elevation="0dp"
        android:gravity="center">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/penggilingan"
            android:gravity="center_horizontal" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Tanggal"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorPrimary"
                    android:padding="16dp"
                    android:inputType="none"
                    android:background="@drawable/input"
                    android:hint="@string/tanggal"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Berat"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorPrimary"
                    android:padding="16dp"
                    android:inputType="number"
                    android:background="@drawable/input"
                    android:hint="@string/berat"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Biaya_Penggilingan"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorPrimary"
                    android:padding="16dp"
                    android:inputType="number"
                    android:background="@drawable/input"
                    android:hint="@string/biaya_penggilingan"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:id="@+id/simpan"
                android:background="@drawable/round_button"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>