<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="400dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/main_logo"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:background="@drawable/round_top"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorWhite"
                    android:text="MASUK"
                    android:gravity="center_horizontal" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/username"
                        android:background="@drawable/input"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/username"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:background="@drawable/input"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/password"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk"
                    android:id="@+id/login"
                    android:background="@drawable/input"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:id="@+id/lupa_password"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/lupa_password"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </FrameLayout>
</FrameLayout>