<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ViewData">

    <View
        android:id="@+id/view"
        android:layout_width="360dp"
        android:layout_height="640dp"
        android:background="@drawable/rounded"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDP1"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/pemasokan"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btnDP" />

    <Button
        android:id="@+id/btnDP3"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/penggilingan"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btnDP1" />

    <Button
        android:id="@+id/btnDS"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/stock"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btnDP3" />

    <Button
        android:id="@+id/btnDHS"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/hasil_giling"
        android:textColor="@color/colorDark"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btnDS"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDP"
        android:layout_width="176dp"
        android:layout_height="51dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded2"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/penjualan"
        android:textColor="@color/colorDark"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>