<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    android:background="@drawable/box"
    android:layout_marginTop="5dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/kode"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/kode_barang"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:id="@+id/kode_barang"
                android:text="BR0129"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/harga" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:id="@+id/Harga"
                android:text="2" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="2dp"
                android:text="@string/jumlah"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:id="@+id/Jumlah"
                android:textAlignment="center"
                android:text="2"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/total_harga"
                android:textAlignment="center"
                android:textSize="12sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:id="@+id/Total_harga"
                android:text="2.5 Kg"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:text="Ubah"
            android:id="@+id/edit"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:id="@+id/delete"
            android:textAlignment="center"
            android:text="Hapus"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>